Adihu : Fixed Menu Spacing Issue
git-svn-id: https://10.24.239.14:5511/svn/Engage@566 f308e16d-57e9-4fa7-a310-9aba3baf408f

--- a/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-business-skin.css
+++ b/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-business-skin.css
@@ -1,21 +1,19 @@
 /*#3cb6ce*/
 /*------------------------------ADF tree---------------------------*/
 
-/*.home_tree{
+.home_tree{
 
 background-color: rgba(253, 253, 250, 0);
 padding-left: 4px;
 padding-top: 2px;
 
-}*/
+}
 
 .home .af_table_data-table-VH-lines .af_column_data-cell, .home .af_table_data-table-VH-lines .af_column_banded-data-cell{
     height: 30px;
     font-weight: bold;
     
 }
-
-
 /*------------------------------ADF tree---------------------------*/
 .af_tree_node-stamp-text{
     border-style: none ;
@@ -748,9 +746,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4a4748', end
 
 .panel_header_authenticated{
     padding-left: 5px;
-}
-
-/**************************************************************/
+}/**************************************************************/
 .printButton {
     /*background-color: rgb(244, 189, 46)!important;*/
     /*background-image: none !important;*/
@@ -1122,7 +1118,7 @@ font-weight:bold;
 
 /*SPRITE CSS*/
 
-.af_tree_expanded-icon-style, .af_treeTable_expanded-icon-style,.af_tree_collapsed-icon-style, .af_treeTable_collapsed-icon-style,.arrow_learn_more_white, .card_icon_ws, .mail_icon, .message_bell, .pdf_icon,.arrow_grey, .card_back, .sign_in, .shop_categories, .arrow_learn_more, .category_icon, .cart, .calendar, .closed, .open,.bell, .acc_summary, .cart, .info_statoil,.invoice, .messages,.transaction, .info,.arrow{
+.af_tree_expanded-icon-style, .af_treeTable_expanded-icon-style,.af_tree_collapsed-icon-style, .af_treeTable_collapsed-icon-style,.arrow_learn_more_white, .card_icon_ws, .mail_icon, .message_bell, .pdf_icon,.arrow_grey, .card_back, .sign_in, .shop_categories, .arrow_learn_more, .category_icon, .cart, .calendar, .closed, .open{
 	background: url("/images/Sprite/sprites.png") no-repeat;
 }
 
@@ -1145,9 +1141,9 @@ font-weight:bold;
 }
 
 .message_bell{
-	background-position: -32px -204px ;
-	width: 17px;
-	height: 21px;
+	background-position: -30px -204px ;
+	width: 30px;
+	height: 20px;
 }
 
 .pdf_icon{
@@ -1193,9 +1189,9 @@ font-weight:bold;
 }
 
 .cart{
-	background-position: -30px -4px ;
-	width: 22px;
-	height: 22px;
+	background-position: -32px -4px ;
+	width: 20px;
+	height: 20px;
 }
 
 
@@ -1218,48 +1214,9 @@ font-weight:bold;
 	height: 6px;
 }
 
-.arrow{
-	background-position: -31px -106px ;
-	width: 12px;
-	height: 13px;
-}
 
-.info{
-	background-position: -29px -371px ;
-	width: 16px;
-	height: 16px;
-}
 
-.transaction{
-	background-position: -28px -351px ;
-	width: 22px;
-	height: 14px;
-}
 
-.messages{
-	background-position: -29px -323px ;
-	width: 22px;
-	height: 22px;
-}
-
-.invoice{
-	background-position: -3px -297px ;
-	width: 22px;
-	height: 22px;
-}
-
-.info_statoil{
-	background-position: -30px -271px ;
-	width: 22px;
-	height: 23px;
-}
-
-.acc_summary{
-	background-position: -29px -246px ;
-	width: 24px;
-	height: 20px;
-        margin-top: -4px;
-}
 
 
 
@@ -1376,7 +1333,7 @@ background-color: red !important;
 
 #top a {
     color: #524E4F !important;
-    display: inline;
+    display: block;
     font: bold 12px Georgia;
     margin-right: 10px;
     margin-top: -2px;
@@ -1604,8 +1561,6 @@ color: #524e4f;
 .af_selectOneRadio_content-input {
     padding: 5px 3px 0px 15px !important;
     vertical-align: 10%;
-}
-
 .transaction_italic{
   font-style:italic;
 }
